# huffman-coding

./: CMakeLists.txt  LICENSE  README.md
src/: huffman-encoder.hpp  huffman-tree.hpp  huffman.hpp  main.cpp  messages.cpp  messages.h  path-manager.cpp  path-manager.h  scoped-handler.hpp
